--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ pyjwt = {extras = ["crypto"], version = "^2.9.0"}
 fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
 datamodel-code-generator = "^0.26.3"
 aiogram = "^3.15.0"
+httpx = "^0.28.0"
+pillow = "^11.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
